# maestro

./: .gitignore  DEVLOG.md  README.md  design-brief.md  fix-slot-function.sh  install-slots.sh  linkedin-post.md  slack-agent.yml  slack-manager.md  slot.yml
dashboard/: index.html  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1780051325369-96a8de4060ad4.mjs
dashboard/src/: App.tsx  HudApp.tsx  ParkedIdeas.tsx  actions.ts  config.ts  main.tsx  status.ts  types.ts
dashboard/src-tauri/: Cargo.toml  create-icons.py  tauri.conf.json
dashboard/src-tauri/capabilities/: default.json
dashboard/src-tauri/icons/: icon.icns
dashboard/src-tauri/src/: lib.rs  main.rs  pty_manager.rs
dashboard/src/components/: ActivityFeed.tsx  AttentionQueue.tsx  RepoSection.tsx  Sidebar.tsx  TerminalPane.tsx  TerminalView.tsx  TopBar.tsx  WorktreeRow.tsx
hooks/: install.sh  maestro-sessions.py  set-state.sh  worktree-pick.sh  write-port.sh
maestro-mac/: Package.swift  README.md
maestro-mac/Sources/Maestro/: Actions.swift  AppDelegate.swift  ChatEngine.swift  ChatView.swift  HUDState.swift  Model.swift  Panel.swift  PillView.swift  SettingsView.swift  Transcript.swift  WorktreeStore.swift  main.swift
server/: package-lock.json  package.json
server/src/: agent-store.ts  claude-sessions.ts  color.ts  discover.ts  http-server.ts  index.ts  node-pty.d.ts  pins.ts  pty-manager.ts  registry.ts  shells.ts  state.ts  vscode.ts
