[package]
name = "maestro"
version = "0.1.0"
description = "Maestro — native terminal multiplexer + AI agent orchestration for developers"
authors = ["Srekaravarshan NK"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "maestro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = [] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
portable-pty   = "0.8"
tokio          = { version = "1", features = ["full"] }
uuid           = { version = "1", features = ["v4"] }

[profile.release]
panic        = "abort"
codegen-units = 1
lto          = true
opt-level    = "s"
strip        = true
