[package]
name = "maestro"
version = "0.1.0"
description = "Maestro — native terminal multiplexer + AI agent orchestration for developers"
authors = ["Srekaravarshan NK"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "maestro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                        = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-single-instance = "2"
tauri-plugin-notification    = "2"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
portable-pty   = "0.8"
tokio          = { version = "1", features = ["full"] }
uuid           = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc  = "0.2"
block = "0.1"

[profile.release]
panic        = "abort"
codegen-units = 1
lto          = true
opt-level    = "s"
strip        = true
